reference/5.1/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 04/23/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6d060e0325ba10391f04348178f28b2793fe37fe
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: de-DE
ms.lasthandoff: 07/07/2020
ms.locfileid: "93213884"
---
# <span data-ttu-id="0e9bb-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="0e9bb-103">Import-Csv</span></span>

## <span data-ttu-id="0e9bb-104">ZUSAMMENFASSUNG</span><span class="sxs-lookup"><span data-stu-id="0e9bb-104">SYNOPSIS</span></span>
<span data-ttu-id="0e9bb-105">Erstellt Tabellen ähnliche benutzerdefinierte Objekte aus den Elementen in einer CSV-Datei (Comma-Separated Value, Komma getrennte Werte).</span><span class="sxs-lookup"><span data-stu-id="0e9bb-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="0e9bb-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="0e9bb-106">SYNTAX</span></span>

### <span data-ttu-id="0e9bb-107">Trennzeichen (Standard)</span><span class="sxs-lookup"><span data-stu-id="0e9bb-107">Delimiter (Default)</span></span>

```
Import-Csv [[-Path] <string[]>] [[-Delimiter] <char>] [-LiteralPath <string[]>] [-Header <string[]>]
 [-Encoding <string>] [<CommonParameters>]
```

### <span data-ttu-id="0e9bb-108">UseCulture</span><span class="sxs-lookup"><span data-stu-id="0e9bb-108">UseCulture</span></span>

```
Import-Csv [[-Path] <string[]>] -UseCulture [-LiteralPath <string[]>] [-Header <string[]>]
 [-Encoding <string>] [<CommonParameters>]
```

## <span data-ttu-id="0e9bb-109">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="0e9bb-109">DESCRIPTION</span></span>

<span data-ttu-id="0e9bb-110">`Import-Csv`Mit dem-Cmdlet werden Tabellen ähnliche benutzerdefinierte Objekte aus den Elementen in CSV-Dateien erstellt.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-110">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="0e9bb-111">Jede Spalte in der CSV-Datei wird zu einer Eigenschaft des benutzerdefinierten Objekts, und die Elemente in den Zeilen werden zu den Eigenschafts Werten.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-111">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="0e9bb-112">`Import-Csv` funktioniert an allen CSV-Dateien, einschließlich Dateien, die vom `Export-Csv` Cmdlet generiert werden.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-112">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="0e9bb-113">Mit den Parametern des `Import-Csv` Cmdlets können Sie die Spalten Kopfzeile und das Element Trennzeichen angeben oder direkt angeben, `Import-Csv` dass das Listen Trennzeichen für die aktuelle Kultur als Element Trennzeichen verwendet werden soll.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-113">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="0e9bb-114">Sie können auch die `ConvertTo-Csv` `ConvertFrom-Csv` Cmdlets und verwenden, um Objekte in CSV-Zeichen folgen (und zurück) zu konvertieren.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-114">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="0e9bb-115">Diese Cmdlets sind `Export-CSV` mit dem-Cmdlet und dem-Cmdlet identisch, mit dem Unterschied, `Import-Csv` dass Sie keine-Dateien behandeln.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-115">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="0e9bb-116">Wenn ein Header Zeileneintrag in einer CSV-Datei einen leeren oder NULL-Wert enthält, fügt PowerShell einen Standard Header-Zeilen Namen ein und zeigt eine Warnmeldung an.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-116">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="0e9bb-117">`Import-Csv` verwendet die Byte Reihenfolge-Markierung (BOM), um das Codierungsformat der Datei zu erkennen.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-117">`Import-Csv` uses the byte-order-mark (BOM) to detect the encoding format of the file.</span></span> <span data-ttu-id="0e9bb-118">Wenn die Datei keine BOM enthält, wird davon ausgegangen, dass die Codierung UTF8 ist.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-118">If the file has no BOM, it assumes the encoding is UTF8.</span></span>

## <span data-ttu-id="0e9bb-119">BEISPIELE</span><span class="sxs-lookup"><span data-stu-id="0e9bb-119">EXAMPLES</span></span>

### <span data-ttu-id="0e9bb-120">Beispiel 1: Importieren von Prozess Objekten</span><span class="sxs-lookup"><span data-stu-id="0e9bb-120">Example 1: Import process objects</span></span>

<span data-ttu-id="0e9bb-121">Dieses Beispiel zeigt, wie Sie eine CSV-Datei mit Prozess Objekten exportieren und dann importieren.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-121">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="0e9bb-122">Das- `Get-Process` Cmdlet sendet Prozess Objekte über die Pipeline an den `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0e9bb-122">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="0e9bb-123">Das `Export-Csv` Cmdlet konvertiert die Prozess Objekte in CSV-Zeichen folgen und speichert die Zeichen folgen in der Processes.csv Datei.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-123">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="0e9bb-124">Mit dem- `Import-Csv` Cmdlet werden die CSV-Zeichen folgen aus der Processes.csv Datei importiert.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-124">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="0e9bb-125">Die Zeichen folgen werden in der `$P` Variablen gespeichert.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-125">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="0e9bb-126">Die `$P` Variable wird über die Pipeline an das `Get-Member` Cmdlet gesendet, das die Eigenschaften der importierten CSV-Zeichen folgen anzeigt.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-126">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="0e9bb-127">Die `$P` -Variable wird an das Cmdlet über die Pipeline gesendet `Format-Table` und zeigt die-Objekte an.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-127">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="0e9bb-128">Beispiel 2: Angeben des Trenn Zeichens</span><span class="sxs-lookup"><span data-stu-id="0e9bb-128">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="0e9bb-129">Dieses Beispiel zeigt die Verwendung des **Delimiter** -Parameters des `Import-Csv` Cmdlets.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-129">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="0e9bb-130">Das- `Get-Process` Cmdlet sendet Prozess Objekte über die Pipeline an `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0e9bb-130">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="0e9bb-131">Das `Export-Csv` Cmdlet konvertiert die Prozess Objekte in CSV-Zeichen folgen und speichert die Zeichen folgen in der Processes.csv Datei.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-131">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="0e9bb-132">Der **Delimiter** -Parameter wird verwendet, um ein Doppelpunkt Trennzeichen anzugeben.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-132">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="0e9bb-133">Mit dem- `Import-Csv` Cmdlet werden die CSV-Zeichen folgen aus der Processes.csv Datei importiert.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-133">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="0e9bb-134">Die Zeichen folgen werden in der `$P` Variablen gespeichert.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-134">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="0e9bb-135">An `$P` Variable wird in der Pipeline an das `Format-Table` Cmdlet gesendet.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-135">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="0e9bb-136">Beispiel 3: Angeben der aktuellen Kultur für das Trennzeichen</span><span class="sxs-lookup"><span data-stu-id="0e9bb-136">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="0e9bb-137">In diesem Beispiel wird gezeigt, wie das `Import-Csv` Cmdlet mit dem **useculture** -Parameter verwendet wird.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-137">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="0e9bb-138">Das `Get-Culture` Cmdlet verwendet die netsted-Eigenschaften **TextInfo** und **ListSeparator** , um das Standard Listen Trennzeichen der aktuellen Kultur zu erhalten.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-138">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="0e9bb-139">Das- `Get-Process` Cmdlet sendet Prozess Objekte über die Pipeline an `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0e9bb-139">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="0e9bb-140">Das `Export-Csv` Cmdlet konvertiert die Prozess Objekte in CSV-Zeichen folgen und speichert die Zeichen folgen in der Processes.csv Datei.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-140">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="0e9bb-141">Der **useculture** -Parameter verwendet das Standard Listen Trennzeichen der aktuellen Kultur.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-141">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="0e9bb-142">Mit dem- `Import-Csv` Cmdlet werden die CSV-Zeichen folgen aus der Processes.csv Datei importiert.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-142">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="0e9bb-143">Beispiel 4: Ändern von Eigenschaftsnamen in einem importierten Objekt</span><span class="sxs-lookup"><span data-stu-id="0e9bb-143">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="0e9bb-144">In diesem Beispiel wird gezeigt, wie der- **Header** Parameter von verwendet wird `Import-Csv` , um die Namen von Eigenschaften im resultierenden importierten Objekt zu ändern.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-144">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished',
  'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error',
  'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="0e9bb-145">Mit dem- `Start-Job` Cmdlet wird ein Hintergrund Auftrag gestartet, der ausführt `Get-Process` .</span><span class="sxs-lookup"><span data-stu-id="0e9bb-145">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="0e9bb-146">Ein Auftrags Objekt wird in der Pipeline an das `Export-Csv` Cmdlet gesendet und in eine CSV-Zeichenfolge konvertiert.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-146">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="0e9bb-147">Der **notypeinformation** -Parameter entfernt den typinformations Header aus der CSV-Ausgabe und ist in PowerShell Core optional.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-147">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="0e9bb-148">Die- `$Header` Variable enthält einen benutzerdefinierten Header, der die folgenden Standardwerte ersetzt: **hasmoredata** , **Jobstatus Info** , **psbegintime** , **psendtime** und **psjobtykame** .</span><span class="sxs-lookup"><span data-stu-id="0e9bb-148">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName** .</span></span> <span data-ttu-id="0e9bb-149">Die- `$A` Variable verwendet das- `Get-Content` Cmdlet, um die CSV-Zeichenfolge aus der Jobs.csv-Datei zu erhalten.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-149">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="0e9bb-150">Die- `$A` Variable wird verwendet, um den Standard Header aus der Datei zu entfernen.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-150">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="0e9bb-151">Das `Out-File` Cmdlet speichert die neue Version der Jobs.csv Datei in der `$A` Variablen.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-151">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="0e9bb-152">Das `Import-Csv` Cmdlet importiert die Jobs.csv Datei und verwendet den **Header** -Parameter, um die `$Header` Variable anzuwenden.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-152">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="0e9bb-153">Die `$J` Variable enthält das importierte **pscustomobject** und zeigt das Objekt in der PowerShell-Konsole an.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-153">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="0e9bb-154">Beispiel 5: Erstellen eines benutzerdefinierten Objekts mithilfe einer CSV-Datei</span><span class="sxs-lookup"><span data-stu-id="0e9bb-154">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="0e9bb-155">Dieses Beispiel zeigt, wie ein benutzerdefiniertes Objekt in PowerShell mithilfe einer CSV-Datei erstellt wird.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-155">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="0e9bb-156">Verwenden Sie die Werte, die in der Ausgabe angezeigt werden, um die Links.csv-Datei zu erstellen `Get-Content` .</span><span class="sxs-lookup"><span data-stu-id="0e9bb-156">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="0e9bb-157">Das- `Get-Content` Cmdlet zeigt die Links.csv Datei an.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-157">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="0e9bb-158">Mit dem- `Import-Csv` Cmdlet wird die Links.csv Datei importiert.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-158">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="0e9bb-159">Der **Header** Parameter gibt die Eigenschaftsnamen " **linkid** " und " **topictitle** " an.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-159">The **Header** parameter specifies the property names **LinkId** and **TopicTitle** .</span></span> <span data-ttu-id="0e9bb-160">Die-Objekte werden in der- `$A` Variable gespeichert.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-160">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="0e9bb-161">Mit dem- `Get-Member` Cmdlet werden die Eigenschaften Namen aus dem **Header** Parameter angezeigt.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-161">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="0e9bb-162">Das `Where-Object` Cmdlet wählt Objekte mit der **topictitle** -Eigenschaft aus, die den **Alias** enthält.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-162">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias** .</span></span>

### <span data-ttu-id="0e9bb-163">Beispiel 6: Importieren eines CSV, dem ein Wert fehlt</span><span class="sxs-lookup"><span data-stu-id="0e9bb-163">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="0e9bb-164">Dieses Beispiel zeigt, wie das `Import-Csv` Cmdlet in PowerShell antwortet, wenn die Kopfzeile in einer CSV-Datei einen NULL-Wert oder einen leeren Wert enthält.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-164">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="0e9bb-165">`Import-Csv` ersetzt einen Standardnamen für die fehlende Kopfzeile, die zum Eigenschaftsnamen des Objekts wird, das `Import-Csv` zurückgibt.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-165">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="0e9bb-166">Verwenden Sie die Werte, die in der Ausgabe des Beispiels angezeigt werden, um die Projects.csv-Datei zu erstellen `Get-Content` .</span><span class="sxs-lookup"><span data-stu-id="0e9bb-166">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="0e9bb-167">Das- `Get-Content` Cmdlet zeigt die Projects.csv Datei an.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-167">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="0e9bb-168">In der Kopfzeile fehlt ein Wert zwischen " **ProjectName** " und " **abgeschlossen** ".</span><span class="sxs-lookup"><span data-stu-id="0e9bb-168">The header row is missing a value between **ProjectName** and **Completed** .</span></span> <span data-ttu-id="0e9bb-169">Das `Import-Csv` Cmdlet importiert die Projects.csv Datei und zeigt eine Warnmeldung an, da **H1** ein Standard Header Name ist.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-169">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="0e9bb-170">Der `(Import-Csv -Path
.\Projects.csv).H1` Befehl ruft die **H1** -Eigenschaftswerte ab und zeigt eine Warnung an.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-170">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="0e9bb-171">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="0e9bb-171">PARAMETERS</span></span>

### <span data-ttu-id="0e9bb-172">-Delimiter</span><span class="sxs-lookup"><span data-stu-id="0e9bb-172">-Delimiter</span></span>

<span data-ttu-id="0e9bb-173">Gibt das Trennzeichen für die Eigenschaftswerte in der CSV-Datei an.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-173">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="0e9bb-174">Der Standardwert ist ein Komma (,).</span><span class="sxs-lookup"><span data-stu-id="0e9bb-174">The default is a comma (,).</span></span>

<span data-ttu-id="0e9bb-175">Geben Sie ein Zeichen ein, z. B. einen Doppelpunkt (:).</span><span class="sxs-lookup"><span data-stu-id="0e9bb-175">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="0e9bb-176">So geben Sie ein Semikolon an (;) Schließen Sie Sie in einfache Anführungszeichen ein.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-176">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="0e9bb-177">Wenn Sie ein anderes Zeichen als das tatsächliche Zeichen folgen Trennzeichen in der Datei angeben, `Import-Csv` kann die Objekte nicht aus den CSV-Zeichen folgen erstellen und die CSV-Zeichen folgen zurückgeben.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-177">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: Delimiter
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="0e9bb-178">-Codierung</span><span class="sxs-lookup"><span data-stu-id="0e9bb-178">-Encoding</span></span>

<span data-ttu-id="0e9bb-179">Gibt den Typ der Codierung für die Zieldatei an.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-179">Specifies the type of encoding for the target file.</span></span> <span data-ttu-id="0e9bb-180">Der Standardwert ist `Default`.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-180">The default value is `Default`.</span></span>

<span data-ttu-id="0e9bb-181">Die zulässigen Werte für diesen Parameter lauten wie folgt:</span><span class="sxs-lookup"><span data-stu-id="0e9bb-181">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="0e9bb-182">`ASCII` Verwendet den ASCII-Zeichensatz (7-Bit).</span><span class="sxs-lookup"><span data-stu-id="0e9bb-182">`ASCII` Uses ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="0e9bb-183">`BigEndianUnicode` Verwendet UTF-16 mit der Big-Endian-Byte Reihenfolge.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-183">`BigEndianUnicode` Uses UTF-16 with the big-endian byte order.</span></span>
- <span data-ttu-id="0e9bb-184">`Default` Verwendet die Codierung, die der aktiven Codepage des Systems entspricht (normalerweise ANSI).</span><span class="sxs-lookup"><span data-stu-id="0e9bb-184">`Default` Uses the encoding that corresponds to the system's active code page (usually ANSI).</span></span>
- <span data-ttu-id="0e9bb-185">`OEM` Verwendet die Codierung, die der aktuellen OEM-Codepage des Systems entspricht.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-185">`OEM` Uses the encoding that corresponds to the system's current OEM code page.</span></span>
- <span data-ttu-id="0e9bb-186">`Unicode` Verwendet UTF-16 mit der Little-Endian-Byte Reihenfolge.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-186">`Unicode` Uses UTF-16 with the little-endian byte order.</span></span>
- <span data-ttu-id="0e9bb-187">`UTF7` Verwendet UTF-7.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-187">`UTF7` Uses UTF-7.</span></span>
- <span data-ttu-id="0e9bb-188">`UTF8` Verwendet UTF-8.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-188">`UTF8` Uses UTF-8.</span></span>
- <span data-ttu-id="0e9bb-189">`UTF32` Verwendet UTF-32 mit der Little-Endian-Byte Reihenfolge.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-189">`UTF32` Uses UTF-32 with the little-endian byte order.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, Default, OEM, Unicode, UTF7, UTF8, UTF32

Required: False
Position: Named
Default value: Default
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="0e9bb-190">-Header</span><span class="sxs-lookup"><span data-stu-id="0e9bb-190">-Header</span></span>

<span data-ttu-id="0e9bb-191">Gibt eine alternative Spaltenkopfzeile für die importierte Datei an.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-191">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="0e9bb-192">Der Spaltenheader bestimmt die Eigenschaftsnamen der Objekte, die von erstellt werden `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0e9bb-192">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="0e9bb-193">Geben Sie Spaltenüberschriften als durch Trennzeichen getrennte Liste ein.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-193">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="0e9bb-194">Die Kopfzeichenfolge darf nicht in Anführungszeichen eingeschlossen werden.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-194">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="0e9bb-195">Schließen Sie jeden Spaltenheader in einfache Anführungszeichen ein.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-195">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="0e9bb-196">Wenn Sie weniger Spaltenüberschriften eingeben, als Datenspalten vorhanden sind, werden die restlichen Datenspalten verworfen.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-196">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="0e9bb-197">Wenn Sie mehr Spaltenüberschriften eingeben, als Datenspalten vorhanden sind, werden die zusätzlichen Spaltenüberschriften mit leeren Datenspalten erstellt.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-197">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="0e9bb-198">Wenn Sie den **Header** -Parameter verwenden, löschen Sie die ursprüngliche Kopfzeile aus der CSV-Datei.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-198">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="0e9bb-199">Andernfalls `Import-Csv` erstellt ein zusätzliches Objekt aus den Elementen in der Kopfzeile.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-199">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="0e9bb-200">-Literalpath</span><span class="sxs-lookup"><span data-stu-id="0e9bb-200">-LiteralPath</span></span>

<span data-ttu-id="0e9bb-201">Gibt den Pfad zu der zu importierenden CSV-Datei an.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-201">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="0e9bb-202">Im Gegensatz zu **Path** wird der Wert des **LiteralPath** -Parameters genauso verwendet, wie er eingegeben wurde.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-202">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="0e9bb-203">Es werden keine Zeichen als Platzhalter interpretiert.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-203">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="0e9bb-204">Wenn der Pfad Escapezeichen enthält, müssen Sie ihn in einfache Anführungszeichen einschließen.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-204">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="0e9bb-205">Einfache Anführungszeichen veranlassen PowerShell, Zeichen nicht als Escapesequenzen zu interpretieren.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-205">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases: PSPath

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="0e9bb-206">-Path</span><span class="sxs-lookup"><span data-stu-id="0e9bb-206">-Path</span></span>

<span data-ttu-id="0e9bb-207">Gibt den Pfad zu der zu importierenden CSV-Datei an.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-207">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="0e9bb-208">Sie können einen Pfad auch über die Pipeline an übergeben `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0e9bb-208">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: 0
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="0e9bb-209">-Useculture</span><span class="sxs-lookup"><span data-stu-id="0e9bb-209">-UseCulture</span></span>

<span data-ttu-id="0e9bb-210">Verwendet das Listen Trennzeichen für die aktuelle Kultur als Element Trennzeichen.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-210">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="0e9bb-211">Um das Listen Trennzeichen für eine Kultur zu suchen, verwenden Sie den folgenden Befehl: `(Get-Culture).TextInfo.ListSeparator` .</span><span class="sxs-lookup"><span data-stu-id="0e9bb-211">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: UseCulture
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="0e9bb-212">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="0e9bb-212">CommonParameters</span></span>

<span data-ttu-id="0e9bb-213">Dieses Cmdlet unterstützt diese gängigen Parameter: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction und -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-213">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="0e9bb-214">Weitere Informationen findest du unter [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span><span class="sxs-lookup"><span data-stu-id="0e9bb-214">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="0e9bb-215">EINGABEN</span><span class="sxs-lookup"><span data-stu-id="0e9bb-215">INPUTS</span></span>

### <span data-ttu-id="0e9bb-216">System.String</span><span class="sxs-lookup"><span data-stu-id="0e9bb-216">System.String</span></span>

<span data-ttu-id="0e9bb-217">Sie können eine Zeichenfolge über die Pipeline übergeben, die einen Pfad zu enthält `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0e9bb-217">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="0e9bb-218">AUSGABEN</span><span class="sxs-lookup"><span data-stu-id="0e9bb-218">OUTPUTS</span></span>

### <span data-ttu-id="0e9bb-219">Object</span><span class="sxs-lookup"><span data-stu-id="0e9bb-219">Object</span></span>

<span data-ttu-id="0e9bb-220">Dieses Cmdlet gibt die Objekte zurück, die durch den Inhalt in der CSV-Datei beschrieben werden.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-220">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="0e9bb-221">HINWEISE</span><span class="sxs-lookup"><span data-stu-id="0e9bb-221">NOTES</span></span>

<span data-ttu-id="0e9bb-222">Da die importierten Objekte CSV-Versionen des Objekt Typs sind, werden Sie von den PowerShell-typformatierungs Einträgen, die die nicht-CSV-Versionen des Objekt Typs formatieren, nicht erkannt und formatiert.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-222">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="0e9bb-223">Das Ergebnis eines `Import-Csv` Befehls ist eine Auflistung von Zeichen folgen, die ein Tabellen ähnliches benutzerdefiniertes Objekt bilden.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-223">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="0e9bb-224">Jede Zeile ist eine separate Zeichenfolge, sodass Sie die **count** -Eigenschaft des Objekts verwenden können, um die Tabellenzeilen zu zählen.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-224">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="0e9bb-225">Die Spalten sind die Eigenschaften des Objekts, und die Elemente in den Zeilen sind die Eigenschaftswerte.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-225">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="0e9bb-226">Die Spaltenkopfzeile bestimmt die Anzahl der Spalten und die Spaltennamen.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-226">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="0e9bb-227">Die Spaltennamen dienen auch als Namen der Objekteigenschaften .</span><span class="sxs-lookup"><span data-stu-id="0e9bb-227">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="0e9bb-228">Die erste Zeile wird als Spalten Kopfzeile interpretiert, es sei denn, Sie verwenden den **Header** -Parameter, um Spaltenüberschriften anzugeben.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-228">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="0e9bb-229">Weist eine beliebige Zeile mehr Werte als die Kopfzeile auf, werden die zusätzlichen Werte ignoriert.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-229">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="0e9bb-230">Wenn in der Spalten Kopfzeile ein Wert fehlt oder ein NULL-Wert oder ein leerer Wert enthalten ist, `Import-Csv` verwendet **H** , gefolgt von einer Zahl für den fehlenden Spaltenheader und den Eigenschaftsnamen.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-230">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="0e9bb-231">In der CSV-Datei wird jedes Objekt durch eine durch Trennzeichen getrennte Liste der Eigenschaftswerte des Objekts dargestellt.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-231">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="0e9bb-232">Die Eigenschaftswerte werden mithilfe der Methode "- **Zeichenfolge ()** " des-Objekts in Zeichen folgen konvertiert, sodass Sie durch den Namen des Eigenschafts Werts dargestellt werden.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-232">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="0e9bb-233">`Export-Csv` exportiert nicht die Methoden des-Objekts.</span><span class="sxs-lookup"><span data-stu-id="0e9bb-233">`Export-Csv` does not export the methods of the object.</span></span>

## <span data-ttu-id="0e9bb-234">VERWANDTE LINKS</span><span class="sxs-lookup"><span data-stu-id="0e9bb-234">RELATED LINKS</span></span>

[<span data-ttu-id="0e9bb-235">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="0e9bb-235">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="0e9bb-236">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="0e9bb-236">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="0e9bb-237">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="0e9bb-237">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="0e9bb-238">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="0e9bb-238">Get-Culture</span></span>](Get-Culture.md)
