reference/7.0/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 1/8/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6c738c11aaa5131cef0ad0457dc50b376152c1f0
ms.sourcegitcommit: de63e9481cf8024883060aae61fb02c59c2de662
ms.translationtype: MT
ms.contentlocale: de-DE
ms.lasthandoff: 07/03/2020
ms.locfileid: "93210892"
---
# <span data-ttu-id="14867-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="14867-103">Import-Csv</span></span>

## <span data-ttu-id="14867-104">ZUSAMMENFASSUNG</span><span class="sxs-lookup"><span data-stu-id="14867-104">SYNOPSIS</span></span>
<span data-ttu-id="14867-105">Erstellt Tabellen ähnliche benutzerdefinierte Objekte aus den Elementen in einer CSV-Datei (Comma-Separated Value, Komma getrennte Werte).</span><span class="sxs-lookup"><span data-stu-id="14867-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="14867-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="14867-106">SYNTAX</span></span>

### <span data-ttu-id="14867-107">Delimiterpath (Standard)</span><span class="sxs-lookup"><span data-stu-id="14867-107">DelimiterPath (Default)</span></span>

```
Import-Csv [[-Delimiter] <Char>] [-Path] <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="14867-108">Delimiterliteralpath</span><span class="sxs-lookup"><span data-stu-id="14867-108">DelimiterLiteralPath</span></span>

```
Import-Csv [[-Delimiter] <Char>] -LiteralPath <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="14867-109">Culturepath</span><span class="sxs-lookup"><span data-stu-id="14867-109">CulturePath</span></span>

```
Import-Csv [-Path] <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="14867-110">Cultureliteralpath</span><span class="sxs-lookup"><span data-stu-id="14867-110">CultureLiteralPath</span></span>

```
Import-Csv -LiteralPath <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

## <span data-ttu-id="14867-111">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="14867-111">DESCRIPTION</span></span>

<span data-ttu-id="14867-112">`Import-Csv`Mit dem-Cmdlet werden Tabellen ähnliche benutzerdefinierte Objekte aus den Elementen in CSV-Dateien erstellt.</span><span class="sxs-lookup"><span data-stu-id="14867-112">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="14867-113">Jede Spalte in der CSV-Datei wird zu einer Eigenschaft des benutzerdefinierten Objekts, und die Elemente in den Zeilen werden zu den Eigenschafts Werten.</span><span class="sxs-lookup"><span data-stu-id="14867-113">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="14867-114">`Import-Csv` funktioniert an allen CSV-Dateien, einschließlich Dateien, die vom `Export-Csv` Cmdlet generiert werden.</span><span class="sxs-lookup"><span data-stu-id="14867-114">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="14867-115">Mit den Parametern des `Import-Csv` Cmdlets können Sie die Spalten Kopfzeile und das Element Trennzeichen angeben oder direkt angeben, `Import-Csv` dass das Listen Trennzeichen für die aktuelle Kultur als Element Trennzeichen verwendet werden soll.</span><span class="sxs-lookup"><span data-stu-id="14867-115">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="14867-116">Sie können auch die `ConvertTo-Csv` `ConvertFrom-Csv` Cmdlets und verwenden, um Objekte in CSV-Zeichen folgen (und zurück) zu konvertieren.</span><span class="sxs-lookup"><span data-stu-id="14867-116">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="14867-117">Diese Cmdlets sind `Export-CSV` mit dem-Cmdlet und dem-Cmdlet identisch, mit dem Unterschied, `Import-Csv` dass Sie keine-Dateien behandeln.</span><span class="sxs-lookup"><span data-stu-id="14867-117">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="14867-118">Wenn ein Header Zeileneintrag in einer CSV-Datei einen leeren oder NULL-Wert enthält, fügt PowerShell einen Standard Header-Zeilen Namen ein und zeigt eine Warnmeldung an.</span><span class="sxs-lookup"><span data-stu-id="14867-118">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="14867-119">Ab PowerShell 6,0 `Import-Csv` unterstützt jetzt das erweiterte W3C-Protokolldatei Format.</span><span class="sxs-lookup"><span data-stu-id="14867-119">Starting with PowerShell 6.0, `Import-Csv` now supports the W3C Extended Log File Format.</span></span>

## <span data-ttu-id="14867-120">BEISPIELE</span><span class="sxs-lookup"><span data-stu-id="14867-120">EXAMPLES</span></span>

### <span data-ttu-id="14867-121">Beispiel 1: Importieren von Prozess Objekten</span><span class="sxs-lookup"><span data-stu-id="14867-121">Example 1: Import process objects</span></span>

<span data-ttu-id="14867-122">Dieses Beispiel zeigt, wie Sie eine CSV-Datei mit Prozess Objekten exportieren und dann importieren.</span><span class="sxs-lookup"><span data-stu-id="14867-122">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="14867-123">Das- `Get-Process` Cmdlet sendet Prozess Objekte über die Pipeline an den `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="14867-123">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="14867-124">Das `Export-Csv` Cmdlet konvertiert die Prozess Objekte in CSV-Zeichen folgen und speichert die Zeichen folgen in der Processes.csv Datei.</span><span class="sxs-lookup"><span data-stu-id="14867-124">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="14867-125">Mit dem- `Import-Csv` Cmdlet werden die CSV-Zeichen folgen aus der Processes.csv Datei importiert.</span><span class="sxs-lookup"><span data-stu-id="14867-125">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="14867-126">Die Zeichen folgen werden in der `$P` Variablen gespeichert.</span><span class="sxs-lookup"><span data-stu-id="14867-126">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="14867-127">Die `$P` Variable wird über die Pipeline an das `Get-Member` Cmdlet gesendet, das die Eigenschaften der importierten CSV-Zeichen folgen anzeigt.</span><span class="sxs-lookup"><span data-stu-id="14867-127">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="14867-128">Die `$P` -Variable wird an das Cmdlet über die Pipeline gesendet `Format-Table` und zeigt die-Objekte an.</span><span class="sxs-lookup"><span data-stu-id="14867-128">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="14867-129">Beispiel 2: Angeben des Trenn Zeichens</span><span class="sxs-lookup"><span data-stu-id="14867-129">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="14867-130">Dieses Beispiel zeigt die Verwendung des **Delimiter** -Parameters des `Import-Csv` Cmdlets.</span><span class="sxs-lookup"><span data-stu-id="14867-130">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="14867-131">Das- `Get-Process` Cmdlet sendet Prozess Objekte über die Pipeline an `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="14867-131">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="14867-132">Das `Export-Csv` Cmdlet konvertiert die Prozess Objekte in CSV-Zeichen folgen und speichert die Zeichen folgen in der Processes.csv Datei.</span><span class="sxs-lookup"><span data-stu-id="14867-132">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="14867-133">Der **Delimiter** -Parameter wird verwendet, um ein Doppelpunkt Trennzeichen anzugeben.</span><span class="sxs-lookup"><span data-stu-id="14867-133">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="14867-134">Mit dem- `Import-Csv` Cmdlet werden die CSV-Zeichen folgen aus der Processes.csv Datei importiert.</span><span class="sxs-lookup"><span data-stu-id="14867-134">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="14867-135">Die Zeichen folgen werden in der `$P` Variablen gespeichert.</span><span class="sxs-lookup"><span data-stu-id="14867-135">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="14867-136">An `$P` Variable wird in der Pipeline an das `Format-Table` Cmdlet gesendet.</span><span class="sxs-lookup"><span data-stu-id="14867-136">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="14867-137">Beispiel 3: Angeben der aktuellen Kultur für das Trennzeichen</span><span class="sxs-lookup"><span data-stu-id="14867-137">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="14867-138">In diesem Beispiel wird gezeigt, wie das `Import-Csv` Cmdlet mit dem **useculture** -Parameter verwendet wird.</span><span class="sxs-lookup"><span data-stu-id="14867-138">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="14867-139">Das `Get-Culture` Cmdlet verwendet die netsted-Eigenschaften **TextInfo** und **ListSeparator** , um das Standard Listen Trennzeichen der aktuellen Kultur zu erhalten.</span><span class="sxs-lookup"><span data-stu-id="14867-139">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="14867-140">Das- `Get-Process` Cmdlet sendet Prozess Objekte über die Pipeline an `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="14867-140">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="14867-141">Das `Export-Csv` Cmdlet konvertiert die Prozess Objekte in CSV-Zeichen folgen und speichert die Zeichen folgen in der Processes.csv Datei.</span><span class="sxs-lookup"><span data-stu-id="14867-141">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="14867-142">Der **useculture** -Parameter verwendet das Standard Listen Trennzeichen der aktuellen Kultur.</span><span class="sxs-lookup"><span data-stu-id="14867-142">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="14867-143">Mit dem- `Import-Csv` Cmdlet werden die CSV-Zeichen folgen aus der Processes.csv Datei importiert.</span><span class="sxs-lookup"><span data-stu-id="14867-143">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="14867-144">Beispiel 4: Ändern von Eigenschaftsnamen in einem importierten Objekt</span><span class="sxs-lookup"><span data-stu-id="14867-144">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="14867-145">In diesem Beispiel wird gezeigt, wie der- **Header** Parameter von verwendet wird `Import-Csv` , um die Namen von Eigenschaften im resultierenden importierten Objekt zu ändern.</span><span class="sxs-lookup"><span data-stu-id="14867-145">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished', 'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error', 'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="14867-146">Mit dem- `Start-Job` Cmdlet wird ein Hintergrund Auftrag gestartet, der ausführt `Get-Process` .</span><span class="sxs-lookup"><span data-stu-id="14867-146">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="14867-147">Ein Auftrags Objekt wird in der Pipeline an das `Export-Csv` Cmdlet gesendet und in eine CSV-Zeichenfolge konvertiert.</span><span class="sxs-lookup"><span data-stu-id="14867-147">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="14867-148">Der **notypeinformation** -Parameter entfernt den typinformations Header aus der CSV-Ausgabe und ist in PowerShell Core optional.</span><span class="sxs-lookup"><span data-stu-id="14867-148">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="14867-149">Die- `$Header` Variable enthält einen benutzerdefinierten Header, der die folgenden Standardwerte ersetzt: **hasmoredata** , **Jobstatus Info** , **psbegintime** , **psendtime** und **psjobtykame** .</span><span class="sxs-lookup"><span data-stu-id="14867-149">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName** .</span></span> <span data-ttu-id="14867-150">Die- `$A` Variable verwendet das- `Get-Content` Cmdlet, um die CSV-Zeichenfolge aus der Jobs.csv-Datei zu erhalten.</span><span class="sxs-lookup"><span data-stu-id="14867-150">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="14867-151">Die- `$A` Variable wird verwendet, um den Standard Header aus der Datei zu entfernen.</span><span class="sxs-lookup"><span data-stu-id="14867-151">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="14867-152">Das `Out-File` Cmdlet speichert die neue Version der Jobs.csv Datei in der `$A` Variablen.</span><span class="sxs-lookup"><span data-stu-id="14867-152">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="14867-153">Das `Import-Csv` Cmdlet importiert die Jobs.csv Datei und verwendet den **Header** -Parameter, um die `$Header` Variable anzuwenden.</span><span class="sxs-lookup"><span data-stu-id="14867-153">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="14867-154">Die `$J` Variable enthält das importierte **pscustomobject** und zeigt das Objekt in der PowerShell-Konsole an.</span><span class="sxs-lookup"><span data-stu-id="14867-154">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="14867-155">Beispiel 5: Erstellen eines benutzerdefinierten Objekts mithilfe einer CSV-Datei</span><span class="sxs-lookup"><span data-stu-id="14867-155">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="14867-156">Dieses Beispiel zeigt, wie ein benutzerdefiniertes Objekt in PowerShell mithilfe einer CSV-Datei erstellt wird.</span><span class="sxs-lookup"><span data-stu-id="14867-156">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="14867-157">Verwenden Sie die Werte, die in der Ausgabe angezeigt werden, um die Links.csv-Datei zu erstellen `Get-Content` .</span><span class="sxs-lookup"><span data-stu-id="14867-157">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="14867-158">Das- `Get-Content` Cmdlet zeigt die Links.csv Datei an.</span><span class="sxs-lookup"><span data-stu-id="14867-158">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="14867-159">Mit dem- `Import-Csv` Cmdlet wird die Links.csv Datei importiert.</span><span class="sxs-lookup"><span data-stu-id="14867-159">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="14867-160">Der **Header** Parameter gibt die Eigenschaftsnamen " **linkid** " und " **topictitle** " an.</span><span class="sxs-lookup"><span data-stu-id="14867-160">The **Header** parameter specifies the property names **LinkId** and **TopicTitle** .</span></span> <span data-ttu-id="14867-161">Die-Objekte werden in der- `$A` Variable gespeichert.</span><span class="sxs-lookup"><span data-stu-id="14867-161">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="14867-162">Mit dem- `Get-Member` Cmdlet werden die Eigenschaften Namen aus dem **Header** Parameter angezeigt.</span><span class="sxs-lookup"><span data-stu-id="14867-162">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="14867-163">Das `Where-Object` Cmdlet wählt Objekte mit der **topictitle** -Eigenschaft aus, die den **Alias** enthält.</span><span class="sxs-lookup"><span data-stu-id="14867-163">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias** .</span></span>

### <span data-ttu-id="14867-164">Beispiel 6: Importieren eines CSV, dem ein Wert fehlt</span><span class="sxs-lookup"><span data-stu-id="14867-164">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="14867-165">Dieses Beispiel zeigt, wie das `Import-Csv` Cmdlet in PowerShell antwortet, wenn die Kopfzeile in einer CSV-Datei einen NULL-Wert oder einen leeren Wert enthält.</span><span class="sxs-lookup"><span data-stu-id="14867-165">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="14867-166">`Import-Csv` ersetzt einen Standardnamen für die fehlende Kopfzeile, die zum Eigenschaftsnamen des Objekts wird, das `Import-Csv` zurückgibt.</span><span class="sxs-lookup"><span data-stu-id="14867-166">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="14867-167">Verwenden Sie die Werte, die in der Ausgabe des Beispiels angezeigt werden, um die Projects.csv-Datei zu erstellen `Get-Content` .</span><span class="sxs-lookup"><span data-stu-id="14867-167">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="14867-168">Das- `Get-Content` Cmdlet zeigt die Projects.csv Datei an.</span><span class="sxs-lookup"><span data-stu-id="14867-168">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="14867-169">In der Kopfzeile fehlt ein Wert zwischen " **ProjectName** " und " **abgeschlossen** ".</span><span class="sxs-lookup"><span data-stu-id="14867-169">The header row is missing a value between **ProjectName** and **Completed** .</span></span> <span data-ttu-id="14867-170">Das `Import-Csv` Cmdlet importiert die Projects.csv Datei und zeigt eine Warnmeldung an, da **H1** ein Standard Header Name ist.</span><span class="sxs-lookup"><span data-stu-id="14867-170">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="14867-171">Der `(Import-Csv -Path
.\Projects.csv).H1` Befehl ruft die **H1** -Eigenschaftswerte ab und zeigt eine Warnung an.</span><span class="sxs-lookup"><span data-stu-id="14867-171">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="14867-172">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="14867-172">PARAMETERS</span></span>

### <span data-ttu-id="14867-173">-Delimiter</span><span class="sxs-lookup"><span data-stu-id="14867-173">-Delimiter</span></span>

<span data-ttu-id="14867-174">Gibt das Trennzeichen für die Eigenschaftswerte in der CSV-Datei an.</span><span class="sxs-lookup"><span data-stu-id="14867-174">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="14867-175">Der Standardwert ist ein Komma (,).</span><span class="sxs-lookup"><span data-stu-id="14867-175">The default is a comma (,).</span></span>

<span data-ttu-id="14867-176">Geben Sie ein Zeichen ein, z. B. einen Doppelpunkt (:).</span><span class="sxs-lookup"><span data-stu-id="14867-176">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="14867-177">So geben Sie ein Semikolon an (;) Schließen Sie Sie in einfache Anführungszeichen ein.</span><span class="sxs-lookup"><span data-stu-id="14867-177">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="14867-178">Wenn Sie ein anderes Zeichen als das tatsächliche Zeichen folgen Trennzeichen in der Datei angeben, `Import-Csv` kann die Objekte nicht aus den CSV-Zeichen folgen erstellen und die CSV-Zeichen folgen zurückgeben.</span><span class="sxs-lookup"><span data-stu-id="14867-178">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: DelimiterPath, DelimiterLiteralPath
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="14867-179">-Codierung</span><span class="sxs-lookup"><span data-stu-id="14867-179">-Encoding</span></span>

<span data-ttu-id="14867-180">Gibt die Codierung für die importierte CSV-Datei an.</span><span class="sxs-lookup"><span data-stu-id="14867-180">Specifies the encoding for the imported CSV file.</span></span> <span data-ttu-id="14867-181">Der Standardwert ist `utf8NoBOM`.</span><span class="sxs-lookup"><span data-stu-id="14867-181">The default value is `utf8NoBOM`.</span></span>

<span data-ttu-id="14867-182">Die zulässigen Werte für diesen Parameter lauten wie folgt:</span><span class="sxs-lookup"><span data-stu-id="14867-182">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="14867-183">`ascii`: Verwendet die Codierung für den ASCII-Zeichensatz (7-Bit).</span><span class="sxs-lookup"><span data-stu-id="14867-183">`ascii`: Uses the encoding for the ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="14867-184">`bigendianunicode`: Codiert im UTF-16-Format unter Verwendung der Big-Endian-Byte Reihenfolge.</span><span class="sxs-lookup"><span data-stu-id="14867-184">`bigendianunicode`: Encodes in UTF-16 format using the big-endian byte order.</span></span>
- <span data-ttu-id="14867-185">`oem`: Verwendet die Standard Codierung für MS-DOS-und-Konsolen Programme.</span><span class="sxs-lookup"><span data-stu-id="14867-185">`oem`: Uses the default encoding for MS-DOS and console programs.</span></span>
- <span data-ttu-id="14867-186">`unicode`: Codiert im UTF-16-Format unter Verwendung der Little-Endian-Byte Reihenfolge.</span><span class="sxs-lookup"><span data-stu-id="14867-186">`unicode`: Encodes in UTF-16 format using the little-endian byte order.</span></span>
- <span data-ttu-id="14867-187">`utf7`: Codiert im UTF-7-Format.</span><span class="sxs-lookup"><span data-stu-id="14867-187">`utf7`: Encodes in UTF-7 format.</span></span>
- <span data-ttu-id="14867-188">`utf8`: Codiert im UTF-8-Format.</span><span class="sxs-lookup"><span data-stu-id="14867-188">`utf8`: Encodes in UTF-8 format.</span></span>
- <span data-ttu-id="14867-189">`utf8BOM`: Codiert im UTF-8-Format mit Byte Reihenfolge Markierung (BOM).</span><span class="sxs-lookup"><span data-stu-id="14867-189">`utf8BOM`: Encodes in UTF-8 format with Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="14867-190">`utf8NoBOM`: Codiert im UTF-8-Format ohne Byte Reihenfolge-Markierung (BOM).</span><span class="sxs-lookup"><span data-stu-id="14867-190">`utf8NoBOM`: Encodes in UTF-8 format without Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="14867-191">`utf32`: Codiert im UTF-32-Format.</span><span class="sxs-lookup"><span data-stu-id="14867-191">`utf32`: Encodes in UTF-32 format.</span></span>

<span data-ttu-id="14867-192">Ab PowerShell 6,2 ermöglicht der **Encoding** -Parameter auch numerische IDs registrierter Codepages (z `-Encoding 1251` . b.) oder Zeichen folgen Namen registrierter Codepages (z `-Encoding "windows-1251"` . b.).</span><span class="sxs-lookup"><span data-stu-id="14867-192">Beginning with PowerShell 6.2, the **Encoding** parameter also allows numeric IDs of registered code pages (like `-Encoding 1251`) or string names of registered code pages (like `-Encoding "windows-1251"`).</span></span> <span data-ttu-id="14867-193">Weitere Informationen finden Sie in der .NET-Dokumentation für [Encoding. Codepage](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2).</span><span class="sxs-lookup"><span data-stu-id="14867-193">For more information, see the .NET documentation for [Encoding.CodePage](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2).</span></span>

```yaml
Type: System.Text.Encoding
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, OEM, Unicode, UTF7, UTF8, UTF8BOM, UTF8NoBOM, UTF32

Required: False
Position: Named
Default value: UTF8NoBOM
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="14867-194">-Header</span><span class="sxs-lookup"><span data-stu-id="14867-194">-Header</span></span>

<span data-ttu-id="14867-195">Gibt eine alternative Spaltenkopfzeile für die importierte Datei an.</span><span class="sxs-lookup"><span data-stu-id="14867-195">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="14867-196">Der Spaltenheader bestimmt die Eigenschaftsnamen der Objekte, die von erstellt werden `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="14867-196">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="14867-197">Geben Sie Spaltenüberschriften als durch Trennzeichen getrennte Liste ein.</span><span class="sxs-lookup"><span data-stu-id="14867-197">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="14867-198">Die Kopfzeichenfolge darf nicht in Anführungszeichen eingeschlossen werden.</span><span class="sxs-lookup"><span data-stu-id="14867-198">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="14867-199">Schließen Sie jeden Spaltenheader in einfache Anführungszeichen ein.</span><span class="sxs-lookup"><span data-stu-id="14867-199">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="14867-200">Wenn Sie weniger Spaltenüberschriften eingeben, als Datenspalten vorhanden sind, werden die restlichen Datenspalten verworfen.</span><span class="sxs-lookup"><span data-stu-id="14867-200">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="14867-201">Wenn Sie mehr Spaltenüberschriften eingeben, als Datenspalten vorhanden sind, werden die zusätzlichen Spaltenüberschriften mit leeren Datenspalten erstellt.</span><span class="sxs-lookup"><span data-stu-id="14867-201">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="14867-202">Wenn Sie den **Header** -Parameter verwenden, löschen Sie die ursprüngliche Kopfzeile aus der CSV-Datei.</span><span class="sxs-lookup"><span data-stu-id="14867-202">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="14867-203">Andernfalls `Import-Csv` erstellt ein zusätzliches Objekt aus den Elementen in der Kopfzeile.</span><span class="sxs-lookup"><span data-stu-id="14867-203">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="14867-204">-Literalpath</span><span class="sxs-lookup"><span data-stu-id="14867-204">-LiteralPath</span></span>

<span data-ttu-id="14867-205">Gibt den Pfad zu der zu importierenden CSV-Datei an.</span><span class="sxs-lookup"><span data-stu-id="14867-205">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="14867-206">Im Gegensatz zu **Path** wird der Wert des **LiteralPath** -Parameters genauso verwendet, wie er eingegeben wurde.</span><span class="sxs-lookup"><span data-stu-id="14867-206">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="14867-207">Es werden keine Zeichen als Platzhalter interpretiert.</span><span class="sxs-lookup"><span data-stu-id="14867-207">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="14867-208">Wenn der Pfad Escapezeichen enthält, müssen Sie ihn in einfache Anführungszeichen einschließen.</span><span class="sxs-lookup"><span data-stu-id="14867-208">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="14867-209">Einfache Anführungszeichen veranlassen PowerShell, Zeichen nicht als Escapesequenzen zu interpretieren.</span><span class="sxs-lookup"><span data-stu-id="14867-209">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterLiteralPath, CultureLiteralPath
Aliases: PSPath, LP

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="14867-210">-Path</span><span class="sxs-lookup"><span data-stu-id="14867-210">-Path</span></span>

<span data-ttu-id="14867-211">Gibt den Pfad zu der zu importierenden CSV-Datei an.</span><span class="sxs-lookup"><span data-stu-id="14867-211">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="14867-212">Sie können einen Pfad auch über die Pipeline an übergeben `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="14867-212">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterPath, CulturePath
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="14867-213">-Useculture</span><span class="sxs-lookup"><span data-stu-id="14867-213">-UseCulture</span></span>

<span data-ttu-id="14867-214">Verwendet das Listen Trennzeichen für die aktuelle Kultur als Element Trennzeichen.</span><span class="sxs-lookup"><span data-stu-id="14867-214">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="14867-215">Um das Listen Trennzeichen für eine Kultur zu suchen, verwenden Sie den folgenden Befehl: `(Get-Culture).TextInfo.ListSeparator` .</span><span class="sxs-lookup"><span data-stu-id="14867-215">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: CulturePath, CultureLiteralPath
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="14867-216">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="14867-216">CommonParameters</span></span>

<span data-ttu-id="14867-217">Dieses Cmdlet unterstützt diese gängigen Parameter: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction und -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="14867-217">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="14867-218">Weitere Informationen findest du unter [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span><span class="sxs-lookup"><span data-stu-id="14867-218">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="14867-219">EINGABEN</span><span class="sxs-lookup"><span data-stu-id="14867-219">INPUTS</span></span>

### <span data-ttu-id="14867-220">System.String</span><span class="sxs-lookup"><span data-stu-id="14867-220">System.String</span></span>

<span data-ttu-id="14867-221">Sie können eine Zeichenfolge über die Pipeline übergeben, die einen Pfad zu enthält `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="14867-221">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="14867-222">AUSGABEN</span><span class="sxs-lookup"><span data-stu-id="14867-222">OUTPUTS</span></span>

### <span data-ttu-id="14867-223">Object</span><span class="sxs-lookup"><span data-stu-id="14867-223">Object</span></span>

<span data-ttu-id="14867-224">Dieses Cmdlet gibt die Objekte zurück, die durch den Inhalt in der CSV-Datei beschrieben werden.</span><span class="sxs-lookup"><span data-stu-id="14867-224">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="14867-225">HINWEISE</span><span class="sxs-lookup"><span data-stu-id="14867-225">NOTES</span></span>

<span data-ttu-id="14867-226">Da die importierten Objekte CSV-Versionen des Objekt Typs sind, werden Sie von den PowerShell-typformatierungs Einträgen, die die nicht-CSV-Versionen des Objekt Typs formatieren, nicht erkannt und formatiert.</span><span class="sxs-lookup"><span data-stu-id="14867-226">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="14867-227">Das Ergebnis eines `Import-Csv` Befehls ist eine Auflistung von Zeichen folgen, die ein Tabellen ähnliches benutzerdefiniertes Objekt bilden.</span><span class="sxs-lookup"><span data-stu-id="14867-227">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="14867-228">Jede Zeile ist eine separate Zeichenfolge, sodass Sie die **count** -Eigenschaft des Objekts verwenden können, um die Tabellenzeilen zu zählen.</span><span class="sxs-lookup"><span data-stu-id="14867-228">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="14867-229">Die Spalten sind die Eigenschaften des Objekts, und die Elemente in den Zeilen sind die Eigenschaftswerte.</span><span class="sxs-lookup"><span data-stu-id="14867-229">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="14867-230">Die Spaltenkopfzeile bestimmt die Anzahl der Spalten und die Spaltennamen.</span><span class="sxs-lookup"><span data-stu-id="14867-230">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="14867-231">Die Spaltennamen dienen auch als Namen der Objekteigenschaften .</span><span class="sxs-lookup"><span data-stu-id="14867-231">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="14867-232">Die erste Zeile wird als Spalten Kopfzeile interpretiert, es sei denn, Sie verwenden den **Header** -Parameter, um Spaltenüberschriften anzugeben.</span><span class="sxs-lookup"><span data-stu-id="14867-232">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="14867-233">Weist eine beliebige Zeile mehr Werte als die Kopfzeile auf, werden die zusätzlichen Werte ignoriert.</span><span class="sxs-lookup"><span data-stu-id="14867-233">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="14867-234">Wenn in der Spalten Kopfzeile ein Wert fehlt oder ein NULL-Wert oder ein leerer Wert enthalten ist, `Import-Csv` verwendet **H** , gefolgt von einer Zahl für den fehlenden Spaltenheader und den Eigenschaftsnamen.</span><span class="sxs-lookup"><span data-stu-id="14867-234">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="14867-235">In der CSV-Datei wird jedes Objekt durch eine durch Trennzeichen getrennte Liste der Eigenschaftswerte des Objekts dargestellt.</span><span class="sxs-lookup"><span data-stu-id="14867-235">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="14867-236">Die Eigenschaftswerte werden mithilfe der Methode "- **Zeichenfolge ()** " des-Objekts in Zeichen folgen konvertiert, sodass Sie durch den Namen des Eigenschafts Werts dargestellt werden.</span><span class="sxs-lookup"><span data-stu-id="14867-236">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="14867-237">`Export-Csv` exportiert nicht die Methoden des-Objekts.</span><span class="sxs-lookup"><span data-stu-id="14867-237">`Export-Csv` does not export the methods of the object.</span></span>

<span data-ttu-id="14867-238">`Import-Csv` unterstützt auch das erweiterte W3C-Protokoll Format.</span><span class="sxs-lookup"><span data-stu-id="14867-238">`Import-Csv` also supports the W3C Extended Log format.</span></span> <span data-ttu-id="14867-239">Zeilen, die mit beginnen, `#` werden als Kommentare behandelt und ignoriert, wenn der Kommentar nicht mit beginnt `#Fields:` und eine durch Trennzeichen getrennte Liste von Spaltennamen enthält.</span><span class="sxs-lookup"><span data-stu-id="14867-239">Lines starting with `#` are treated as comments and ignored unless the comment starts with `#Fields:` and contains delimited list of column names.</span></span> <span data-ttu-id="14867-240">In diesem Fall verwendet das Cmdlet diese Spaltennamen.</span><span class="sxs-lookup"><span data-stu-id="14867-240">In that case, the cmdlet uses those column names.</span></span> <span data-ttu-id="14867-241">Dies ist das Standardformat für Windows IIS und andere Webserver Protokolle.</span><span class="sxs-lookup"><span data-stu-id="14867-241">This is the standard format for Windows IIS and other web server logs.</span></span> <span data-ttu-id="14867-242">Weitere Informationen finden Sie unter [erweitertes Protokolldatei Format](https://www.w3.org/TR/WD-logfile.html).</span><span class="sxs-lookup"><span data-stu-id="14867-242">For more information, see [Extended Log File Format](https://www.w3.org/TR/WD-logfile.html).</span></span>

## <span data-ttu-id="14867-243">VERWANDTE LINKS</span><span class="sxs-lookup"><span data-stu-id="14867-243">RELATED LINKS</span></span>

[<span data-ttu-id="14867-244">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="14867-244">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="14867-245">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="14867-245">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="14867-246">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="14867-246">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="14867-247">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="14867-247">Get-Culture</span></span>](Get-Culture.md)
